apd_detector_rust/build_final_error_v7_utf8.txt
**********************************************************************
** Visual Studio 2022 Developer Command Prompt v17.14.28
** Copyright (c) 2025 Microsoft Corporation
**********************************************************************
[vcvarsall.bat] Environment initialized for: 'x64'
cmd :    Compiling 
apd_detector v0.1.0 (C:\Magan
g_Alif\Trial\apd_detector_rus
t)
At line:1 char:1
+ cmd /c "call ""C:\Program 
Files\Microsoft Visual 
Studio\2022\Communit ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~
    + CategoryInfo           
   : NotSpecified: (   Comp  
  iling ap..._detector_rus   
 t):String) [], RemoteExc    
eption
    + FullyQualifiedErrorId  
   : NativeCommandError
 
warning: unused import: 
`std::path::PathBuf`
 --> src\main.rs:2:5
  |
2 | use std::path::PathBuf;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: 
`#[warn(unused_imports)]` 
(part of `#[warn(unused)]`) 
on by default

warning: unused import: 
`std::path::Path`
 --> src\detector.rs:7:5
  |
7 | use std::path::Path;
  |     ^^^^^^^^^^^^^^^

warning: unused imports: 
`CV_32F` and `Size`
 --> src\utils.rs:1:40
  |
1 | use 
opencv::core::{Point, 
Scalar, Mat, Size, CV_32F};
  |                          
              ^^^^  ^^^^^^

error[E0308]: `?` operator 
has incompatible types
  --> src\detector.rs:66:46
   |
66 |           let 
output_tensor: 
ArrayViewD<f32> = outputs[0]
   |  _______________________
_______________________^
67 | |             
.try_extract_tensor()
68 | |             
.map_err(|e| 
anyhow::anyhow!("Failed to 
extract tensor: {}", e))?;
   | |_______________________
_____________________________
_________________________^ 
expected 
`ArrayBase<ViewRepr<&f32>, 
Dim<...>>`, found `(&Shape, 
&[_])`
   |
   = note: `?` operator 
cannot convert from 
`(&ort::value::Shape, &[_])` 
to 
`ArrayBase<ViewRepr<&f32>, 
Dim<IxDynImpl>>`
   = note: expected struct 
`ArrayBase<ViewRepr<&f32>, 
Dim<IxDynImpl>>`
               found tuple 
`(&ort::value::Shape, &[_])`

For more information about 
this error, try `rustc 
--explain E0308`.
warning: `apd_detector` (bin 
"apd_detector") generated 3 
warnings
error: could not compile 
`apd_detector` (bin 
"apd_detector") due to 1 
previous error; 3 warnings 
emitted
